<resources>

    <string name="app_name">Viaplay GameCenter</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Viaplay GameCenter</string>
    <string name="invalid_joystick_area">Invalid joystick area</string>
    <string name="has_right_joystick">has_right_joystick</string>
    <string name="right_joystick">right_joystick</string>
    <string name="has_left_joystick">has_left_joystick</string>
    <string name="left_joystick">left_joystick</string>
    <string name="perference_title">JnsIMESettings</string>
    <string name="about">About</string>
    <string name="version">version</string>
    <string name="version_num">Viaplay GameCenter V 2.01_zh Powered by Viaplay Corporation</string>
    <string name="quit">Quit</string>
    <string name="help">Help</string>
    <string name="screen_shot">Waiting for ScreenShot</string>
    <string name="save_notice">Save this config?</string>
    <string name="click_to_change">Click to change InputMethod</string>
    <string name="update_list">Game List has been updated</string>
    <string name="floating_notice">Use floating winows to capture screen?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="root_notice">Viaplay GameCenter can not get root access. Touch mapping functionality will not be available until the device is rooted
    
    
        </string>
        <string name="floatViewS">Floating window option</string>
        <string name="toogle_to_open">Check to show a floating window</string>
        <string name="reboot_notice">The device needs to reboot, or can not properly use the mapping function of Viaplay GameCenter</string>
        <string name="i_get">I get it</string>
    <string name="changeime">Keyboard  &amp; Input Method</string>
    <string name="Introduction">	    \n\t Introduction:\n\n
	    \t 1.Viaplay GameCenter requires a rooted device. Please note that rooting \n
	    \t your device may void your warranty. Root at your own risk\n
	   \t  2.Make sure Viaplay GameCenter is the current InputMethod.\n
	    \t 3.Touch mapping:\n
	    	\t \t       a. Press  "select" &amp; "start" key or click the floating window to start the Mapping UI.\n
	    	\t \t      b. Touch the area that you want to map, and then press the key which you want\n 
	    	\t \t       to mapping with the selected screen area.\n
	    	\t \t       c. If you want to mapping either Joysticks,  touch at the center of the Virtual\n
	    	\t \t        joystick,and then drag outward to adjust the area size. Move \n
	    	\t \t       the jostick to confirm you Mapping.\n
	    	\t \t       d. Click the save button to save you Mapping. \n</string>
<string name="root_device">
	 \t Your device has not yet get root permissions, so can not use advanced functions like touch mapping, it would only support limited games. \n
	
	</string>

</resources>